--- a/app/src/main/res/layout/fragment_watchlist.xml
+++ b/app/src/main/res/layout/fragment_watchlist.xml
@@ -41,4 +41,10 @@
         android:layout_height="wrap_content"
         android:text="Delete" />
 
+    <Button
+        android:id="@+id/shareButton"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Share to Facebook" />
+
 </LinearLayout>
