--- a/app/src/main/res/layout/fragment_add_to_memoir.xml
+++ b/app/src/main/res/layout/fragment_add_to_memoir.xml
@@ -37,6 +37,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="20dp"
+                android:textStyle="bold"
                 android:text="Movie name: " />
 
             <TextView
@@ -49,6 +50,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="20dp"
+                android:textStyle="bold"
                 android:text="Release date: " />
 
             <TextView
@@ -60,6 +62,7 @@
                 android:id="@+id/addToMemoirWatchDateLabel"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:textStyle="bold"
                 android:layout_marginTop="20dp"
                 android:text="Watch date: " />
 
@@ -78,6 +81,7 @@
                 android:id="@+id/addToMemoirWatchTImeLabel"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:textStyle="bold"
                 android:layout_marginTop="20dp"
                 android:text="Watch time: " />
 
@@ -96,6 +100,7 @@
                 android:id="@+id/addToMeoirCinemaLabel"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:textStyle="bold"
                 android:layout_marginTop="20dp"
                 android:text="Cinema: " />
 
@@ -114,6 +119,7 @@
                 android:id="@+id/addToMemoirCommentLabel"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:textStyle="bold"
                 android:layout_marginTop="20dp"
                 android:text="Comment: " />
 
@@ -128,6 +134,7 @@
                 android:id="@+id/addToMemoirRatingLabel"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:textStyle="bold"
                 android:layout_marginTop="20dp"
                 android:text="Rating: " />
 
