--- a/app/src/main/res/layout/fragment_movie_search.xml
+++ b/app/src/main/res/layout/fragment_movie_search.xml
@@ -39,6 +39,7 @@
         android:id="@+id/movieSearchOutput"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:textStyle="bold"
         android:text="Search result (Image/ Moive name/ Release date): " />
 
     <ListView
