--- a/app/src/main/res/layout/fragment_report.xml
+++ b/app/src/main/res/layout/fragment_report.xml
@@ -28,6 +28,7 @@
                 android:id="@+id/startDateLabel"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:textStyle="bold"
                 android:text="Start Date: " />
 
             <TextView
@@ -45,6 +46,7 @@
                 android:id="@+id/endDateLabel"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:textStyle="bold"
                 android:text="End date: " />
 
             <TextView
@@ -74,6 +76,7 @@
                 android:id="@+id/yearLabel"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:textStyle="bold"
                 android:layout_marginTop="20dp"
                 android:text="Year: " />
 
